--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a class="active" href="#login">Login</a>
         <a href="#profile">Profile</a>
         <a href="#checklist">Checklist</a>
+        <a href="#grader">Grader</a>
         <a href="#calendar">Calendar</a>
         <a href="#tutor">Tutor</a>
     </div>
